--- a/exploratory-data-analysis.html
+++ b/exploratory-data-analysis.html
@@ -117,7 +117,7 @@
 <li class="chapter" data-level="4.3" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#artists"><i class="fa fa-check"></i><b>4.3</b> Artists</a>
 <ul>
 <li class="chapter" data-level="4.3.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#most-productive-artists"><i class="fa fa-check"></i><b>4.3.1</b> Most Productive Artists</a></li>
-<li class="chapter" data-level="4.3.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#charts"><i class="fa fa-check"></i><b>4.3.2</b> Charts</a></li>
+<li class="chapter" data-level="4.3.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#charts-advanced"><i class="fa fa-check"></i><b>4.3.2</b> Charts (Advanced)</a></li>
 </ul></li>
 <li class="chapter" data-level="4.4" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#compare-artists-based-on-their-songs"><i class="fa fa-check"></i><b>4.4</b> Compare Artists Based on their Songs</a>
 <ul>
@@ -376,8 +376,8 @@ For plotting use matplotlib’s <code>plt.barh(...)</code>.</p>
 </div>
 <p><img src="splots/artists_bar_chart.png" width="100%" style="display: block; margin: auto;" /></p>
 </div>
-<div id="charts" class="section level3" number="4.3.2">
-<h3><span class="header-section-number">4.3.2</span> Charts</h3>
+<div id="charts-advanced" class="section level3" number="4.3.2">
+<h3><span class="header-section-number">4.3.2</span> Charts (Advanced)</h3>
 <p>Care to discover new songs?</p>
 <p>In this section, you’ll work with entirely new data (links in the respective tips section).
 The goal should be to create a map with a hover effect displaying each country’s top song (and its composer) when hovering your mouse over that country.</p>
