--- a/popularity-prediction-application-of-statistical-methods.html
+++ b/popularity-prediction-application-of-statistical-methods.html
@@ -117,7 +117,7 @@
 <li class="chapter" data-level="4.3" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#artists"><i class="fa fa-check"></i><b>4.3</b> Artists</a>
 <ul>
 <li class="chapter" data-level="4.3.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#most-productive-artists"><i class="fa fa-check"></i><b>4.3.1</b> Most Productive Artists</a></li>
-<li class="chapter" data-level="4.3.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#charts"><i class="fa fa-check"></i><b>4.3.2</b> Charts</a></li>
+<li class="chapter" data-level="4.3.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#charts-advanced"><i class="fa fa-check"></i><b>4.3.2</b> Charts (Advanced)</a></li>
 </ul></li>
 <li class="chapter" data-level="4.4" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#compare-artists-based-on-their-songs"><i class="fa fa-check"></i><b>4.4</b> Compare Artists Based on their Songs</a>
 <ul>
