maps for advanced

--- a/excercise-checklist.html
+++ b/excercise-checklist.html
@@ -187,7 +187,7 @@
 <li><strong>Artists</strong></li>
 </ol>
 <p>3.1 Bar plot with artists with most songs</p>
-<p>3.2 Map with top songs in each country</p>
+<p>3.2 For Advanced: Map with top songs in each country</p>
 <ol start="4" style="list-style-type: decimal">
 <li><strong>Pairplot: Artist Comparison</strong></li>
 </ol>
