seaborn gallery space

--- a/exploratory-data-analysis.html
+++ b/exploratory-data-analysis.html
@@ -432,7 +432,7 @@ Write in a comment what your visualization shows and what message it delivers. W
 <p>Visit <a href="https://www.r-graph-gallery.com/all-graphs">“The R Graph Gallery”</a> to find inspiration for your figure. You could then use either the {base} R or the familiar {ggplot2} package to create the plot of your choice.</p>
 </div>
 <div class="tipsp python">
-<p>Visit the [“Seaborn Gallery”] (<a href="https://seaborn.pydata.org/examples/index.html#" class="uri">https://seaborn.pydata.org/examples/index.html#</a>), look for a plot that you could use to visualize an aspect of Spotify data and generate a visualization.</p>
+<p>Visit the <a href="https://seaborn.pydata.org/examples/index.html#">“Seaborn Gallery”</a>, look for a plot that you could use to visualize an aspect of Spotify data and generate a visualization.</p>
 </div>
 </div>
 </div>
