--- a/popularity-prediction-application-of-statistical-methods.html
+++ b/popularity-prediction-application-of-statistical-methods.html
@@ -210,7 +210,7 @@ X_train, X_test, y_train, y_test = train_test_split(df, df.popularity, test_size
 <p>Define both dependent (y_train) and independent (X_train) variables and clean the data if necessary.</p>
 </div>
 <div class="tipsp python">
-<p>For the next step the X_train values need to be reshaped .values.reshape(-1,1). Note: If you use more than one feature, you don’t have to reshape your data.</p>
+<p>For the next step the X_train values need to be reshaped <code>.values.reshape(-1,1)</code>. Note: If you use more than one feature, you don’t have to reshape your data.</p>
 <p>Import <code>LinearRegression()</code> from <code>sklear.linear_model</code> and train your model using <code>LinearRegression().fit()</code>.</p>
 </div>
 <p>Does your independent variable has a statistically significant impact on popularity? Probably yes, because we selected the variable most correlated with popularity. However, if we stick to this very simplified model, we make a typical mistake: the so-called Omitted Variable Bias (OVB). To put it simply, we neglect (in statistics jargon: “do not control for”) variables that have a significant influence on the dependent variable. One could suspect that other influencing factors also play an important role in estimating a song’s popularity. If we do not include them, the estimate of the effect of, e.g., danceability, is biased and hardly helpful. In our case, this is not a big problem for the time being since we are not interested in causal effects but rather in the best possible prediction. Your statistics professor would almost certainly object to such a model. Nonetheless, with just a single explanatory variable, this model will not necessarily predict the popularity well.</p>
@@ -244,9 +244,9 @@ r2=metrics.r2_score(y_true, y_pred)</code></pre></p>
 </div>
 <div class="tipsp python">
 <p>Finally, compare your predicted values with the test values:</p>
-<p>from sklearn.metrics import mean_squared_error
+<p><pre><code>from sklearn.metrics import mean_squared_error
 # Function that returns Root Mean Squared Error while ignoring NaNs
-rmse = mean_squared_error(y_test, predicted_popularity, squared=False)</p>
+rmse = mean_squared_error(y_test, predicted_popularity, squared=False)</code></pre></p>
 </div>
 <p>Now compare both regression models. Does the larger model have better prediction accuracy, i.e., a lower <span class="math inline">\(RMSE\)</span>? Now you have a benchmark for your more advanced models, which you can beat in the next part.</p>
 </div>
